--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "roundtable-frontend",
 	"version": "0.0.1",
+	"license": "CC-BY-NC-4.0",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev --host 0.0.0.0",
