chore: update Nixpacks configuration to use Node.js 22
Changed the Node.js version in the Nixpacks configuration from 20.x to 22 for improved compatibility and performance.

--- a/frontend/nixpacks.toml
+++ b/frontend/nixpacks.toml
@@ -1,6 +1,6 @@
 # Nixpacks configuration for frontend (Node.js/SvelteKit)
 [phases.setup]
-nixPkgs = ["nodejs-20_x"]
+nixPkgs = ["nodejs_22"]
 
 [phases.install]
 cmds = ["npm install"]
