--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
 		"test:coverage": "vitest run --coverage"
 	},
 	"devDependencies": {
+		"@playwright/test": "^1.40.0",
 		"@sveltejs/adapter-node": "^5.0.1",
 		"@sveltejs/kit": "^2.5.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
